# cmux-hub

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  biome.json  build-compile.ts  build.ts  package-lock.json  package.json  tsconfig.web.json
.claude/: cmux-hub.json  settings.json
.claude-plugin/: marketplace.json
.claude/commands/: cmux-hub-dev.md
.github/workflows/: ci.yml  release.yml
cmux-hub-plugin/: README.md
cmux-hub-plugin/.claude-plugin/: plugin.json
cmux-hub-plugin/defaults/: actions.json
cmux-hub-plugin/hooks/: hooks.json
cmux-hub-plugin/scripts/: start.sh
e2e/: screenshots.spec.ts  server.ts  smoke.spec.ts
legacy/typescript/: README.md  build-compile.ts  build.ts  package.json  playwright.config.ts
scripts/: launch.sh
server/: actions.ts  app.ts  cmux.ts  diff-highlight.ts  git.ts  github.ts  highlighter.ts  logger.ts  plan-watcher.ts  plan.ts  updater.ts  watcher.ts
server/__tests__/: actions.test.ts  cmux.test.ts  git.test.ts  github.test.ts  integration.test.ts  security.test.ts
server/middleware/: security.ts
src/: App.tsx  actions.rs  cli.ts  git.rs  index.css  index.html  index.ts  lib.rs  main.rs  security.rs  server.rs
src/__tests__/: diff-parser.test.ts
src/components/: CIStatus.tsx  CommentForm.tsx  CommitList.tsx  DiffFile.tsx  DiffLine.tsx  DiffView.tsx  PRComments.tsx  PlanView.tsx  Toolbar.tsx
src/hooks/: useDiff.ts  useHashRoute.ts  usePRData.ts  usePlanData.ts  useStatus.ts  useWSFetch.ts  useWebSocket.ts
src/lib/: api.ts  diff-parser.ts
web/: app.js  index.html  styles.css
(+51 files in other folders)
