[package]
name = "cmux-hub"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws", "json"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.13"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "cmux-hub"
path = "src/main.rs"
